--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -125,10 +125,10 @@
     "\n",
     ":::{tab-item} Polar\n",
     "$$\n",
-    "\\nabla^2 = {\\color{blue}\\frac{1}{{ r^2}} \\frac{{\\partial}}{{\\partial r}} \\left(r^2 \\frac{{\\partial}}{{\\partial r}}\\right) } + \\frac{1}{{{\\color{blue} r^2} {\\color{green}\\sin(\\theta)}}} {\\color{green}\\frac{{\\partial}}{{\\partial \\theta}} \\left(\\sin(\\theta) \\frac{{\\partial}}{{\\partial \\theta}}\\right)} + {\\color{orange}\\frac{1}{{{\\color{blue} r^2} {\\color{green}\\sin^2(\\theta)}}} \\frac{{\\partial^2}}{{\\partial \\phi^2}}}\n",
-    "$$\n",
+    "\\nabla^2 = {\\color{blue}\\frac{1}{r^2} \\frac{\\partial}{\\partial r} \\left(r^2 \\frac{\\partial}{\\partial r}\\right)} + {\\color{green}\\frac{1}{{\\color{blue} r^2} \\sin(\\theta)}} {\\color{green} \\frac{\\partial}{\\partial \\theta} \\left(\\sin(\\theta) \\frac{\\partial}{\\partial \\theta}\\right)} + { \\frac{{\\color{green} 1}}{{\\color{blue} r^2} {\\color{green} \\sin^2(\\theta)}} {\\color{orange}\\frac{\\partial^2}{\\partial \\phi^2}}}\n",
+    "$$ \n",
     ":::\n",
-    "::::"
+    "::::\n"
    ]
   },
   {
@@ -297,6 +297,9 @@
    "source": [
     "### Spherical harmonics \n",
     "\n",
+    "- Spherical harmonics, denoted as $Y_{lm}(\\theta, \\phi)$ or $|l, m\\rangle$ are important in many theoretical and practical applications, e.g., the representation of multipole electrostatic and electromagnetic fields, computation of [atomic orbital](https://en.wikipedia.org/wiki/Atomic_orbital) [electron configurations](https://en.wikipedia.org/wiki/Electron_configuration), representation of gravitational fields,  MRI imaging for streamline tractography, and the magnetic fields of planetary bodies and stars.\n",
+    "- Spherical harmonics  emerge from the angular part of the solutions to the Laplace equation $\\nable^2 f=0$ in spherical coordinates which is the type of equation we obtained for Rigid Rotor problem and will see once more in Hydrogen atom problem.\n",
+    "\n",
     "| $ Y_{lm}(\\theta, \\phi) $ | Expression | Colatitudinal Nodes | Azimuthal Nodes |\n",
     "|----------------------------|------------|----------------------|------------------|\n",
     "| $ Y_{00} $               | $ \\frac{1}{\\sqrt{4\\pi}} $ | 0 | 0 |\n",
@@ -307,9 +310,9 @@
     "| $ Y_{2-2} $              | $ \\sqrt{\\frac{15}{4\\pi}} \\sin^2(\\theta) e^{-2i\\phi} $ | 0 | 2 |\n",
     "\n",
     "\n",
-    "- Spherical harmonics are important in many theoretical and practical applications, e.g., the representation of multipole electrostatic and electromagnetic fields, computation of [atomic orbital](https://en.wikipedia.org/wiki/Atomic_orbital) [electron configurations](https://en.wikipedia.org/wiki/Electron_configuration), representation of gravitational fields,  MRI imaging for streamline tractography, and the magnetic fields of planetary bodies and stars.\n",
+    "#### Nodes of Spherical Harmonics\n",
     "\n",
-    "- The nodes of spherical harmonics, $Y_{lm}(\\theta, \\phi)$, are determined by the angular part of the solutions to the Laplace equation in spherical coordinates. The nodal structure is influenced by both the degree $ l $ and the order $m$, defining the number and type of nodes as follows:\n",
+    "The nodal structure of spherical harmonics is influenced by both the degree $ l $ and the order $m$, defining the number and type of nodes as follows:\n",
     "\n",
     "1. **Colatitudinal Nodes (Polar Nodes)**: The variable $ \\theta $ defines \"polar\" nodes, which appear as circular bands around the sphere. The expression in $ \\cos(\\theta) $ or $ \\sin(\\theta) $ creates colatitudinal nodes:\n",
     "   - For example, $ Y_{10} $ with $ \\cos(\\theta) $ has a single node at $ \\theta = \\pi/2 $, creating an equatorial node.\n",
@@ -322,7 +325,7 @@
     "3. **Total Nodes:** equal to sum of nodes coming from polar and longitudinal nodes and are exactly equal to $l$. E. gl=0 no nodes, l=4 four nodes. \n",
     "\n",
     "\n",
-    "**Orthogonality**\n",
+    "#### Orthogonality of Spherical Harmonics\n",
     "\n",
     "The orthogonality of spherical harmonics is expressed as:\n",
     "\n",
