--- a/ch04/note04.ipynb
+++ b/ch04/note04.ipynb
@@ -583,7 +583,7 @@
     "\n",
     "# Update layout to arrange scenes in a row and add titles as annotations\n",
     "fig.update_layout(\n",
-    "    title=\"Three Spherical Harmonics: l=1, m=-1, 0, 1\",\n",
+    "    title=\"Three Spherical Harmonics: m=1, l=1, 2, 3\",\n",
     "    scene=dict(domain=dict(x=[0, 0.33]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
     "    scene2=dict(domain=dict(x=[0.33, 0.66]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
     "    scene3=dict(domain=dict(x=[0.66, 1]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
@@ -599,6 +599,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative visualizations of Spherical Harmonics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Before we visualized spherical harmonics on unit sphere $|r|=1$. However there are times where we want to visualize how magnitude of spherical harmooc is changing in space. \n",
+    "- For instnace to visualize $Y_{1,-1}\\sim cos(\\theta)$ we could either plot its values on a unit sphere or we could also plot how $\\cos(\\theta)$ changes as we move around in space. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -608,35 +623,150 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "from scipy.special import sph_harm\n",
     "\n",
-    "# Generate data for Y(11,1)\n",
-    "l, m = 7, 1\n",
-    "x, y, z, fcolors_normalized = generate_spherical_harmonic_data(l, m)\n",
+    "# Set up the subplots with two side-by-side 3D plots\n",
+    "fig = make_subplots(rows=1, cols=2, specs=[[{'is_3d': True}, {'is_3d': True}]])\n",
     "\n",
+    "# Define theta and phi grids for spherical coordinates\n",
+    "theta = np.linspace(0, np.pi, 100)\n",
+    "phi = np.linspace(0, 2 * np.pi, 100)\n",
+    "theta, phi = np.meshgrid(theta, phi)\n",
     "\n",
-    "# Plot the spherical harmonic Y(11,1)\n",
-    "fig = go.Figure(data=[go.Surface(\n",
-    "    x=x, y=y, z=z,\n",
-    "    surfacecolor=fcolors_normalized,\n",
-    "    colorscale='rdbu',\n",
-    "    cmin=0,\n",
-    "    cmax=1,\n",
-    "    showscale=False\n",
-    ")])\n",
+    "# Convert spherical to Cartesian coordinates for the surface plots\n",
+    "x = np.sin(theta) * np.cos(phi)\n",
+    "y = np.sin(theta) * np.sin(phi)\n",
+    "z = np.cos(theta)\n",
     "\n",
-    "# Customize the layout\n",
-    "fig.update_layout(\n",
-    "    title=f\"Spherical Harmonic $Y_{{{l},{m}}}$\",\n",
-    "    scene=dict(\n",
-    "        xaxis=dict(visible=False),\n",
-    "        yaxis=dict(visible=False),\n",
-    "        zaxis=dict(visible=False),\n",
-    "        aspectmode='cube'\n",
-    "    )\n",
+    "# Compute the spherical harmonic Y_{1,-1}\n",
+    "m, l = -1, 1\n",
+    "r0a = np.sqrt(3 / (4 * np.pi)) * y  # Y_{1,-1} harmonic on y-axis\n",
+    "r0 = np.abs(r0a)  # Absolute value for magnitude scaling\n",
+    "\n",
+    "# First plot: Scaled by the spherical harmonic (bead-like structure)\n",
+    "fig.add_trace(\n",
+    "    go.Surface(\n",
+    "        x=r0 * x, y=r0 * y, z=r0 * z,  # Scale coordinates by |Y_{1,-1}|\n",
+    "        surfacecolor=r0a,  # Color by Y_{1,-1} values\n",
+    "        colorscale='RdBu'\n",
+    "    ),\n",
+    "    row=1, col=1\n",
     ")\n",
     "\n",
-    "# Display the figure\n",
+    "# Second plot: Standard unit sphere with grayscale color\n",
+    "fig.add_trace(\n",
+    "    go.Surface(\n",
+    "        x=x, y=y, z=z,  # Unit sphere without scaling\n",
+    "        surfacecolor=z,  # Color by z-coordinate for simplicity\n",
+    "        colorscale='RdBu'\n",
+    "    ),\n",
+    "    row=1, col=2\n",
+    ")\n",
+    "\n",
+    "# Update layout for both plots\n",
+    "fig.update_layout(\n",
+    "    font_family=\"JuliaMono\",\n",
+    "    showlegend=False,\n",
+    "    margin=dict(l=0, r=0, b=0, t=0),\n",
+    "    paper_bgcolor='rgba(0,0,0,0)',\n",
+    ")\n",
+    "\n",
+    "# Set scene properties with adjusted axis limits for each plot\n",
+    "fig.update_scenes(\n",
+    "    dict(\n",
+    "        xaxis=dict(nticks=4, range=[-0.5, 0.5]),  # Limit range to reduce empty space\n",
+    "        yaxis=dict(nticks=4, range=[-0.5, 0.5]),\n",
+    "        zaxis=dict(nticks=4, range=[-0.5, 0.5]),\n",
+    "        aspectratio=dict(x=1, y=1, z=1)\n",
+    "    ),\n",
+    "    row=1, col=1\n",
+    ")\n",
+    "fig.update_scenes(\n",
+    "    dict(\n",
+    "        xaxis=dict(nticks=4, range=[-1.8, 1.8]),\n",
+    "        yaxis=dict(nticks=4, range=[-1.8, 1.8]),\n",
+    "        zaxis=dict(nticks=4, range=[-1.8, 1.8]),\n",
+    "        aspectratio=dict(x=1, y=1, z=1)\n",
+    "    ),\n",
+    "    row=1, col=2\n",
+    ")\n",
+    "\n",
+    "# Hide color scales for a cleaner look\n",
+    "fig.update_traces(showscale=False)\n",
+    "\n",
+    "# Show the plot\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "from matplotlib import cm\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define theta (angle) values\n",
+    "theta = np.linspace(0, 2 * np.pi, 100)\n",
+    "\n",
+    "# Compute spherical harmonic values (scaled sin(theta) for two-lobe structure)\n",
+    "Y_1m1_values = np.sin(theta)  # Y_{1,-1} varies with sin(theta) for the two-lobe shape\n",
+    "r_values = np.abs(Y_1m1_values)  # Radial scaling based on |Y_{1,-1}|\n",
+    "\n",
+    "# Set up the color map\n",
+    "cmap = cm.get_cmap(\"RdBu\")\n",
+    "norm = plt.Normalize(vmin=-1, vmax=1)\n",
+    "\n",
+    "# Create subplots for two polar plots\n",
+    "fig = make_subplots(rows=1, cols=2, specs=[[{'type': 'polar'}, {'type': 'polar'}]])\n",
+    "\n",
+    "# First polar plot: Two-lobed structure with color gradient\n",
+    "for i in range(len(theta) - 1):\n",
+    "    fig.add_trace(\n",
+    "        go.Scatterpolar(\n",
+    "            r=[r_values[i], r_values[i + 1]],\n",
+    "            theta=[np.degrees(theta[i]), np.degrees(theta[i + 1])],\n",
+    "            mode=\"lines\",\n",
+    "            line=dict(color=f\"rgba{cmap(norm(Y_1m1_values[i]))}\", width=5),\n",
+    "            showlegend=False\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "\n",
+    "# Second polar plot: Unit circle with consistent color gradient\n",
+    "for i in range(len(theta) - 1):\n",
+    "    fig.add_trace(\n",
+    "        go.Scatterpolar(\n",
+    "            r=[1, 1],  # Fixed radius for unit circle\n",
+    "            theta=[np.degrees(theta[i]), np.degrees(theta[i + 1])],\n",
+    "            mode=\"lines\",\n",
+    "            line=dict(color=f\"rgba{cmap(norm(Y_1m1_values[i]))}\", width=5),\n",
+    "            showlegend=False\n",
+    "        ),\n",
+    "        row=1, col=2\n",
+    "    )\n",
+    "\n",
+    "# Update layout for both polar plots with fixed radius range and equal appearance\n",
+    "fig.update_layout(\n",
+    "    font_family=\"JuliaMono\",\n",
+    "    showlegend=False,\n",
+    "    margin=dict(l=0, r=0, b=0, t=0),\n",
+    "    polar=dict(radialaxis=dict(range=[0, 1.2])),  # First plot axis range\n",
+    "    polar2=dict(radialaxis=dict(range=[0, 1.2]))  # Second plot axis range\n",
+    ")\n",
+    "\n",
+    "# Show the plot\n",
     "fig.show()\n"
    ]
   },
