--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -298,7 +298,7 @@
     "### Spherical harmonics \n",
     "\n",
     "- Spherical harmonics, denoted as $Y_{lm}(\\theta, \\phi)$ or $|l, m\\rangle$ are important in many theoretical and practical applications, e.g., the representation of multipole electrostatic and electromagnetic fields, computation of [atomic orbital](https://en.wikipedia.org/wiki/Atomic_orbital) [electron configurations](https://en.wikipedia.org/wiki/Electron_configuration), representation of gravitational fields,  MRI imaging for streamline tractography, and the magnetic fields of planetary bodies and stars.\n",
-    "- Spherical harmonics  emerge from the angular part of the solutions to the Laplace equation $\\nable^2 f=0$ in spherical coordinates which is the type of equation we obtained for Rigid Rotor problem and will see once more in Hydrogen atom problem.\n",
+    "- Spherical harmonics  emerge from the angular part of the solutions to the Laplace equation $\\nabla^2 f=0$ in spherical coordinates which is the type of equation we obtained for Rigid Rotor problem and will see once more in Hydrogen atom problem.\n",
     "\n",
     "| $ Y_{lm}(\\theta, \\phi) $ | Expression | Colatitudinal Nodes | Azimuthal Nodes |\n",
     "|----------------------------|------------|----------------------|------------------|\n",
@@ -318,7 +318,7 @@
     "   - For example, $ Y_{10} $ with $ \\cos(\\theta) $ has a single node at $ \\theta = \\pi/2 $, creating an equatorial node.\n",
     "   - $ Y_{20} $, with $ (3\\cos^2(\\theta) - 1) $, introduces two polar nodes, dividing the sphere into three regions along the colatitude.\n",
     "\n",
-    "2. **Azimuthal Nodes (Longitudinal Nodes)**: The variable $ \\phi $ defines \"azimuthal\" nodes due to the terms $ e^{im\\phi} $, which create lines of longitude where the function changes phase. The number of azimuthal nodes is determined by $ |m| $:\n",
+    "2. **Azimuthal Nodes (Longitudinal Nodes)**: The variable $ \\phi $ defines \"azimuthal\" nodes due to the terms $e^{im\\phi}$, which create lines of longitude where the function changes phase. The number of azimuthal nodes is determined by $ |m| $:\n",
     "   - If $ m = 0 $, there are no azimuthal nodes, as seen in $ Y_{00} $ and $ Y_{10} $.\n",
     "   - For $ m = \\pm 1 $, a single azimuthal node occurs (e.g., $ Y_{1-1} $, $ Y_{2-1} $), and for $ m = \\pm 2 $, two azimuthal nodes appear (e.g., $ Y_{2-2} $).\n",
     "\n",
