--- a/ch04/note04.ipynb
+++ b/ch04/note04.ipynb
@@ -715,6 +715,7 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from matplotlib import cm\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Define theta (angle) values\n",
@@ -725,7 +726,7 @@
     "r_values = np.abs(Y_1m1_values)  # Radial scaling based on |Y_{1,-1}|\n",
     "\n",
     "# Set up the color map\n",
-    "cmap = cm.get_cmap(\"RdBu\")\n",
+    "cmap = matplotlib.colormaps[\"RdBu\"]\n",
     "norm = plt.Normalize(vmin=-1, vmax=1)\n",
     "\n",
     "# Create subplots for two polar plots\n",
@@ -767,7 +768,7 @@
     ")\n",
     "\n",
     "# Show the plot\n",
-    "fig.show()\n"
+    "fig.show()"
    ]
   },
   {
