--- a/ch06/demo_pert.ipynb
+++ b/ch06/demo_pert.ipynb
@@ -244,6 +244,54 @@
     "# Create interactive sliders\n",
     "interact(plot_energy_and_wavefunctions, a=(0, 25, 1), n=(1, 5, 1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insights into Molecular Orbtials and Bonding from pertrubation theory perspective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def molecular_orbital_energies(E_A, E_B, H_AB):\n",
+    "    \"\"\"\n",
+    "    Compute molecular orbital energies using perturbation theory.\n",
+    "    \"\"\"\n",
+    "    E_avg = (E_A + E_B) / 2\n",
+    "    delta_E = (E_A - E_B) / 2\n",
+    "    E_plus = E_avg + np.sqrt(delta_E**2 + H_AB**2)  # Antibonding\n",
+    "    E_minus = E_avg - np.sqrt(delta_E**2 + H_AB**2)  # Bonding\n",
+    "    return E_minus, E_plus\n",
+    "\n",
+    "# Parameters\n",
+    "E_A_vals = np.linspace(-5, 0, 100)  # Atomic orbital energy of A (e.g., 1s)\n",
+    "E_B = -4  # Fixed atomic orbital energy of B (e.g., 2s)\n",
+    "H_AB = 0.5  # Interaction strength\n",
+    "\n",
+    "# Compute MO energies\n",
+    "bonding, antibonding = [], []\n",
+    "for E_A in E_A_vals:\n",
+    "    E_minus, E_plus = molecular_orbital_energies(E_A, E_B, H_AB)\n",
+    "    bonding.append(E_minus)\n",
+    "    antibonding.append(E_plus)\n",
+    "\n",
+    "# Plot results\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(E_A_vals, bonding, label='Bonding MO ($E_-$)', color='blue')\n",
+    "plt.plot(E_A_vals, antibonding, label='Antibonding MO ($E_+$)', color='red')\n",
+    "plt.axhline(E_B, color='gray', linestyle='--', label='Atomic Orbital B')\n",
+    "plt.xlabel('Atomic Orbital Energy of A ($E_A$)')\n",
+    "plt.ylabel('Molecular Orbital Energy')\n",
+    "plt.title('Molecular Orbital Formation via Perturbation Theory')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
