--- a/_sources/ch06/demo_pert.ipynb
+++ b/_sources/ch06/demo_pert.ipynb
@@ -292,6 +292,78 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Roles of Bonding and Antibonding**:\n",
+    "   - Bonding energy $ E_- $: Stabilized by $ -|H_{AB}|^2 / \\Delta E $.\n",
+    "   - Antibonding energy $E_+$: Destabilized by $ +|H_{AB}|^2 / \\Delta E$.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ipywidgets import interact\n",
+    "\n",
+    "def molecular_orbital_energies(E_A, E_B, H_AB):\n",
+    "    \"\"\"\n",
+    "    Compute molecular orbital energies using second-order perturbation theory.\n",
+    "    \"\"\"\n",
+    "    if E_A == E_B:\n",
+    "        E_A += 1e-6  # Avoid division by zero\n",
+    "\n",
+    "    delta_E = E_A - E_B  # Energy spacing\n",
+    "    bonding = E_A - (H_AB**2 / delta_E)  # Bonding MO\n",
+    "    antibonding = E_B + (H_AB**2 / delta_E)  # Antibonding MO\n",
+    "\n",
+    "    return bonding, antibonding\n",
+    "\n",
+    "def plot_energy_levels(delta_E=2.0, H_AB=0.5):\n",
+    "    \"\"\"\n",
+    "    Visualize energy levels of atomic and molecular orbitals with second-order corrections.\n",
+    "    \"\"\"\n",
+    "    # Atomic orbital energies\n",
+    "    E_B = -4.0  # Fixed AO energy of B\n",
+    "    E_A = E_B + delta_E  # Varying AO energy of A\n",
+    "\n",
+    "    # Molecular orbital energies\n",
+    "    E_minus, E_plus = molecular_orbital_energies(E_A, E_B, H_AB)\n",
+    "\n",
+    "    # Plot energy levels\n",
+    "    fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "    \n",
+    "    # Atomic orbital levels\n",
+    "    ax.hlines(E_A, 0.2, 0.4, color='blue', label=f'Atomic Orbital A ($E_A = {E_A:.2f}$)')\n",
+    "    ax.hlines(E_B, 0.2, 0.4, color='green', label=f'Atomic Orbital B ($E_B = {E_B:.2f}$)')\n",
+    "    \n",
+    "    # Molecular orbital levels\n",
+    "    ax.hlines(E_minus, 0.6, 0.8, color='orange', label=f'Bonding MO ($E_- = {E_minus:.2f}$)')\n",
+    "    ax.hlines(E_plus, 0.6, 0.8, color='red', label=f'Antibonding MO ($E_+ = {E_plus:.2f}$)')\n",
+    "    \n",
+    "    # Connect atomic and molecular orbitals\n",
+    "    ax.plot([0.4, 0.6], [E_A, E_plus], color='gray', linestyle='--', linewidth=1)\n",
+    "    ax.plot([0.4, 0.6], [E_B, E_minus], color='gray', linestyle='--', linewidth=1)\n",
+    "    \n",
+    "    # Axis settings\n",
+    "    ax.set_xlim(0.1, 0.9)\n",
+    "    ax.set_ylim(-20, 20)\n",
+    "    ax.set_ylabel('Energy')\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_title('Energy Levels with Second-Order Corrections')\n",
+    "    ax.legend()\n",
+    "    ax.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "# Create interactive sliders\n",
+    "interact(plot_energy_levels, delta_E=(-5.0, 5.0, 0.1), H_AB=5)"
+   ]
   }
  ],
  "metadata": {
