--- a/_sources/ch06/lin_var.ipynb
+++ b/_sources/ch06/lin_var.ipynb
@@ -11,33 +11,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{admonition} What you need to know\n",
+    ":::{admonition} **What You Need to Know**\n",
     ":class: note\n",
     "\n",
-    "- The variational method is a powerful method that can be used to determine upper bounds and approximations for ground state energies of numerous quantum mechanical problems.  \n",
-    "- The variational method is used heavily in electronic structure theories such as Hartree Fock.\n",
-    "- The linear varaation method is seeking solutions to Schrodinger equation by expressing trial wavefunctions as linear combinations of easy to compute functions like gaussians or exponential.\n",
-    "- The linear variational method converts Schrodinger equation into linear algebra problem of finding eigenvalues (energies) and eigenvectors (coefficients in linear combination)\n",
+    "- The variational method is a powerful tool for estimating upper bounds and approximations for ground-state energies in a wide range of quantum mechanical problems.  \n",
+    "- It plays a key role in electronic structure theories, such as Hartree-Fock.  \n",
+    "- The **linear variational method** seeks solutions to the Schrödinger equation by representing trial wavefunctions as linear combinations of simple, computationally efficient functions, such as Gaussians or exponentials.  \n",
+    "- By applying the linear variational method, the Schrödinger equation is transformed into a linear algebra problem, where the goal is to find eigenvalues (representing energies) and eigenvectors (providing coefficients for the linear combination).  \n",
     "\n",
-    ":::"
+    ":::\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linearizing the pproblem"
+    "### Linearizing the problem"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How does this help us in practice?  In a typical QM problem, we are attempting to solve for the wavefunction(s) and energy(ies) for a given Hamiltonian.  If the Hamiltonian is such that solving the problem exactly is too challenging (e.g. any two or more electron problem) we can expand the wavefunction in a basis and attempt to solve the problem that way.  We start with \n",
+    "- How does linearization help us in practice?  In a typical QM problem, we are attempting to solve for the wavefunction(s) and energy(ies) for a given Hamiltonian.  If the Hamiltonian is such that solving the problem exactly is too challenging (e.g. any two or more electron problem) we can expand the wavefunction in a basis and attempt to solve the problem that way.  We start with \n",
     "\n",
     "$$\\psi \\approx \\phi = \\sum_n^N c_nf_n$$\n",
     "\n",
-    "Truncating this expansion at any finite $n$ leads to an approximate solution.  Also, what the variational principle tells us is that we can minimize the energy with respect to variational paramters ${c_n}$ and still have $E_\\phi \\geq E_0$.  "
+    "- Truncating this expansion at any finite $n$ leads to an approximate solution.  Also, what the variational principle tells us is that we can minimize the energy with respect to variational paramters ${c_n}$ and still have $E_\\phi \\geq E_0$.  "
    ]
   },
   {
@@ -52,9 +52,10 @@
     "\n",
     "- There is currently no need to define these functions explicitly so we will leave them as generic functions $f_1$ and $f_2$.  We now solve for the energy\n",
     "\n",
-    "$$E_\\phi = \\frac{\\langle\\phi|\\hat{H}|\\phi\\rangle}{\\langle\\phi|\\phi\\rangle}$$\n",
+    "$$E_\\phi = \\frac{\\langle\\phi|\\hat{H}|\\phi\\rangle}{\\langle\\phi|\\phi\\rangle} = \\frac{\\langle c_1f_1 + c_2f_2|\\hat{H}|c_1f_1 + c_2f_2 \\rangle}{\\langle c_1f_1 + c_2f_2|c_1f_1 + c_2f_2 \\rangle}$$\n",
     "\n",
-    "$$ = \\frac{\\langle c_1f_1 + c_2f_2|\\hat{H}|c_1f_1 + c_2f_2 \\rangle}{\\langle c_1f_1 + c_2f_2|c_1f_1 + c_2f_2 \\rangle}$$\n",
+    ":::{admonitition} **Express probelm in terms of coeeficients and matrix elements**\n",
+    ":class: dropdown\n",
     "\n",
     "- Let's investigate the numerator and denomenator separately.  We start with the numerator\n",
     "\n",
@@ -77,45 +78,53 @@
     "$$S_{ij} = \\langle f_i|f_j\\rangle$$\n",
     "\n",
     "where $S_{ij}$ is another matrix element but this time referred to as the basis function overlap.Now we have that the energy of the trial wavefunction is\n",
+    ":::\n",
     "\n",
-    "$$E_\\phi = \\frac{c_1^2 H_{11} + 2c_1c_2H_{12} + c_2^2H_{22}}{c_1^2S_{11} + 2c_1c_2S_{12} + c_2^2S_{22}}$$"
+    "\n",
+    "$$E_\\phi = \\frac{c_1^2 H_{11} + 2c_1c_2H_{12} + c_2^2H_{22}}{c_1^2S_{11} + 2c_1c_2S_{12} + c_2^2S_{22}}$$\n",
+    "\n",
+    "- $H_{ij} = \\langle f_i |\\hat{H}|f_j\\rangle$  **Hamiltonian matrix element expressed in basis of $f$**\n",
+    "- $S_{ij} = \\langle f_i|f_j\\rangle$   **S matrix element or overlap integral expressed in basis of $f$**. This one measures how similiar $f_i$ is to $f_j$. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eigenvalue problem\n",
+    "### Eigenvalue Problem\n",
     "\n",
-    "- Since $E_\\phi \\geq E_0$ for any function $\\phi$ we can minimize the energy, $E_\\phi$, with respect to variational paramters $c_1$ and $c_2$.  We start by minimizing with respect to $c_1$ which equates to differentiating the energy with respect to $c_1$ and setting that derivative to zero\n",
+    "- Since $E_\\phi \\geq E_0$ for any trial function $\\phi$, we can minimize the energy $E_\\phi$ by varying the parameters $c_1$ and $c_2$.  \n",
     "\n",
-    "$$\\frac{\\partial E_\\phi}{\\partial c_1} = 0 = c_1(H_{11}-ES_{11}) + c_2(H_{12}-ES_{12})$$\n",
+    "- To minimize with respect to $c_1$, we differentiate $E_\\phi$ with respect to $c_1$ and set the derivative equal to zero:\n",
     "\n",
-    "- Similarly, minimizing with respect to $c_2$ we get\n",
+    "  $$\\frac{\\partial E_\\phi}{\\partial c_1} = 0 = c_1(H_{11} - ES_{11}) + c_2(H_{12} - ES_{12})$$\n",
     "\n",
-    "$$\\frac{\\partial E_\\phi}{\\partial c_2} = 0 = c_1(H_{12}-ES_{12}) + c_2(H_{22}-ES_{22})$$\n",
+    "- Similarly, minimizing with respect to $c_2$ gives:\n",
     "\n",
-    "- We can rewrite the above two coupled linear equations as a matrix equation\n",
+    "  $$\\frac{\\partial E_\\phi}{\\partial c_2} = 0 = c_1(H_{12} - ES_{12}) + c_2(H_{22} - ES_{22})$$\n",
     "\n",
-    "$$\\begin{bmatrix} H_{11}-ES_{11} & H_{12}-ES_{12} \\\\ H_{12}-ES_{12} & H_{22}-ES_{22} \\end{bmatrix}\\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = 0$$\n",
+    "- These two coupled linear equations can be expressed compactly as a matrix equation:\n",
     "\n",
-    "- We can rewrite the left most matrix as a difference of two matrices and then add to both sides:\n",
+    "  $$\\begin{bmatrix} H_{11} - ES_{11} & H_{12} - ES_{12} \\\\ H_{12} - ES_{12} & H_{22} - ES_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = 0$$\n",
     "\n",
-    "$$\\left(\\begin{bmatrix} H_{11} & H_{12} \\\\ H_{12} & H_{22} \\end{bmatrix} - \\begin{bmatrix} ES_{11} & ES_{12} \\\\ ES_{12} & ES_{22} \\end{bmatrix} \\right) \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = 0$$\n",
+    "- The matrix on the left can be rewritten as the difference between two matrices:\n",
     "\n",
-    "$$\\Rightarrow \\begin{bmatrix} H_{11} & H_{12} \\\\ H_{12} & H_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = \\begin{bmatrix} ES_{11} & ES_{12} \\\\ ES_{12} & ES_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} $$\n",
+    "  $$\\left(\\begin{bmatrix} H_{11} & H_{12} \\\\ H_{12} & H_{22} \\end{bmatrix} - E \\begin{bmatrix} S_{11} & S_{12} \\\\ S_{12} & S_{22} \\end{bmatrix} \\right) \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = 0$$\n",
     "\n",
-    "$$ \\begin{bmatrix} H_{11} & H_{12} \\\\ H_{12} & H_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = E\\begin{bmatrix} S_{11} & S_{12} \\\\ S_{12} & S_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} $$\n",
+    "- Rearranging, we can write:\n",
     "\n",
-    "- or, written in more general matrix notation, \n",
+    "  $$\\begin{bmatrix} H_{11} & H_{12} \\\\ H_{12} & H_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix} = E \\begin{bmatrix} S_{11} & S_{12} \\\\ S_{12} & S_{22} \\end{bmatrix} \\begin{bmatrix} c_1 \\\\ c_2 \\end{bmatrix}$$\n",
     "\n",
-    "$$\\mathbf{H}\\mathbf{c} = E\\mathbf{S}\\mathbf{c}$$\n",
+    "- In more compact matrix notation, this becomes:\n",
     "\n",
-    "- If we now left multiply both sides of the above equation by $\\mathbf{S}^{-1}$ we see that we have an eigenvalue-eigenvector problem\n",
+    "  $$\\mathbf{H}\\mathbf{c} = E\\mathbf{S}\\mathbf{c}$$\n",
     "\n",
-    "$$\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c}$$\n",
+    "- By left-multiplying both sides by $\\mathbf{S}^{-1}$, we transform this into a standard eigenvalue problem:\n",
     "\n",
-    "- Thus the minimum energies are the eigenvalues of $\\mathbf{S}^{-1}\\mathbf{H}$ and the variational parameters that minimize the energies are the eigenvectors of $\\mathbf{S}^{-1}\\mathbf{H}$."
+    "  $$\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c}$$\n",
+    "\n",
+    "- Therefore, the minimum energies correspond to the eigenvalues of $\\mathbf{S}^{-1}\\mathbf{H}$, and the variational parameters that minimize the energies are the eigenvectors of $\\mathbf{S}^{-1}\\mathbf{H}$.  \n"
    ]
   },
   {
