--- a/_sources/ch06/lin_var.ipynb
+++ b/_sources/ch06/lin_var.ipynb
@@ -118,13 +118,74 @@
     "\n",
     "- In more compact matrix notation, this becomes:\n",
     "\n",
+    ":::{admonition}\n",
+    ":class: important\n",
+    "\n",
     "  $$\\mathbf{H}\\mathbf{c} = E\\mathbf{S}\\mathbf{c}$$\n",
+    "\n",
+    "- $\\mathbf{H}$ N by N matrix of hamiltonian elements $\\langle f_i |\\hat{H}|f_j\\rangle$\n",
+    "- $S$ an N by N matrix of overlap integrals $\\langle f_i|f_j\\rangle$\n",
+    "- $\\mathbf{c} = (c_1, c_2, ...)$ vector of N length.\n",
+    "- $E$ eigenvalues that can saitsfy this equation. For symmetric matrices one expects to get N possible values!\n",
+    "\n",
+    ":::\n",
     "\n",
     "- By left-multiplying both sides by $\\mathbf{S}^{-1}$, we transform this into a standard eigenvalue problem:\n",
     "\n",
     "  $$\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c}$$\n",
     "\n",
-    "- Therefore, the minimum energies correspond to the eigenvalues of $\\mathbf{S}^{-1}\\mathbf{H}$, and the variational parameters that minimize the energies are the eigenvectors of $\\mathbf{S}^{-1}\\mathbf{H}$.  \n"
+    "- Therefore, the minimum energies correspond to the eigenvalues of $\\mathbf{S}^{-1}\\mathbf{H}$, and the variational parameters that minimize the energies are the eigenvectors of $\\mathbf{S}^{-1}\\mathbf{H}$. \n",
+    "\n",
+    ":::{admonition} **Breaking problem down to matrix eigenvalue eigenvector problem**\n",
+    ":class: tip, collapse\n",
+    "\n",
+    "In the equation \n",
+    "\n",
+    "$$\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c},$$  \n",
+    "\n",
+    "**$\\mathbf{I}$** represents the identity matrix. Its role in this context is essential to express the equation as a **standard eigenvalue problem**.\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. **Eigenvalue Problem Form**:  \n",
+    "\n",
+    "   In linear algebra, a standard eigenvalue problem is written as:  \n",
+    "   $$\\mathbf{A}\\mathbf{v} = \\lambda \\mathbf{I}\\mathbf{v},$$  \n",
+    "   where:  \n",
+    "   - $\\mathbf{A}$ is a square matrix,  \n",
+    "   - $\\lambda$ is a scalar eigenvalue,  \n",
+    "   - $\\mathbf{I}$ is the identity matrix, and  \n",
+    "   - $\\mathbf{v}$ is the corresponding eigenvector.\n",
+    "\n",
+    "   The identity matrix $\\mathbf{I}$ ensures that $\\lambda$ scales the eigenvector $\\mathbf{v}$ without altering its direction. The eigenvalue problem is about finding the values of $\\lambda$ and their associated $\\mathbf{v}$.\n",
+    "\n",
+    "2. **Connecting to $\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c}$**:  \n",
+    "   Here, $\\mathbf{S}^{-1}\\mathbf{H}$ acts as the operator $\\mathbf{A}$ in the standard eigenvalue problem.  \n",
+    "   - $\\mathbf{S}^{-1}\\mathbf{H}$ is a matrix resulting from left-multiplying $\\mathbf{H}$ by the inverse of $\\mathbf{S}$.  \n",
+    "   - $\\mathbf{c}$ represents the eigenvector.  \n",
+    "   - $E$ is the eigenvalue (corresponding to the energy in the quantum mechanical system).  \n",
+    "\n",
+    "   The identity matrix $\\mathbf{I}$ is explicitly included to highlight that $E$ is a scalar multiplying the vector $\\mathbf{c}$. This ensures that the left-hand side (a matrix operation) matches the right-hand side (a scaled vector).  \n",
+    "\n",
+    "3. **Why $\\mathbf{S}^{-1}$ Appears**:  \n",
+    "   Initially, we had:  \n",
+    "   $$\\mathbf{H}\\mathbf{c} = E\\mathbf{S}\\mathbf{c},$$  \n",
+    "   which cannot directly be interpreted as an eigenvalue problem because of the presence of $\\mathbf{S}$ (the overlap matrix). To transform this into a standard form, we pre-multiply both sides by $\\mathbf{S}^{-1}$:  \n",
+    "   $$\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{S}^{-1}\\mathbf{S}\\mathbf{c}.$$  \n",
+    "   Since $\\mathbf{S}^{-1}\\mathbf{S} = \\mathbf{I}$, this simplifies to:  \n",
+    "   $$\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c}.$$\n",
+    "\n",
+    "4. **How to Interpret This as an Eigenvalue Problem**:  \n",
+    "   The equation now has the form of a standard eigenvalue problem:  \n",
+    "   $$\\mathbf{A}\\mathbf{v} = \\lambda \\mathbf{I}\\mathbf{v},$$  \n",
+    "   where:  \n",
+    "   - $\\mathbf{A} = \\mathbf{S}^{-1}\\mathbf{H}$ is the effective matrix to diagonalize,  \n",
+    "   - $\\lambda = E$ are the eigenvalues, corresponding to the energy levels,  \n",
+    "   - $\\mathbf{v} = \\mathbf{c}$ are the eigenvectors, containing the coefficients of the trial wavefunctions.\n",
+    "\n",
+    "5. **Physical Interpretation**:  \n",
+    "   Solving the eigenvalue problem $\\mathbf{S}^{-1}\\mathbf{H}\\mathbf{c} = E\\mathbf{I}\\mathbf{c}$ gives the approximate energies ($E$) of the quantum system as eigenvalues and the corresponding variational parameters ($\\mathbf{c}$) as eigenvectors. The identity matrix $\\mathbf{I}$ is crucial for preserving the standard form of the eigenvalue problem, ensuring proper mathematical and physical interpretation.\n",
+    ":::"
    ]
   },
   {
@@ -142,7 +203,7 @@
     "\n",
     "$$\\hat{H} = -\\frac{\\hbar^2}{2m}\\frac{d^2}{dx^2}$$\n",
     "\n",
-    "While we can (/have) solved this problem analytically, it will be instructive to see how the variational solution works.  We start by approximating $\\psi(x)$ as an expansion in two basis functions\n",
+    "While we can have solved this problem analytically, it will be instructive to see how the variational solution works.  We start by approximating $\\psi(x)$ as an expansion in two basis functions\n",
     "\n",
     "$$\\psi(x) \\approx c_1x(a-x) + c_2x^2(a-x)^2$$\n",
     "\n",
