--- a/ch07/note04.ipynb
+++ b/ch07/note04.ipynb
@@ -11,12 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1. Introduction**\n",
-    "\n",
     "- **Objective**: Approximate the electronic structure of atoms and molecules by treating electrons as independent particles in an average field created by all other electrons.\n",
     "- **Motivation**: The Schrödinger equation for multi-electron systems is too complex to solve exactly.\n",
-    "\n",
-    "## **2. Key Concepts**\n",
     "\n",
     "### **Wavefunction**\n",
     "- The total wavefunction $\\Psi(1, 2, \\cdots, N)$ is approximated as a single Slater determinant to satisfy the Pauli exclusion principle.\n",
@@ -29,12 +25,15 @@
     "\n",
     "### **Fock Operator**\n",
     "- The Fock operator $\\hat{F}$ is a sum of the one-electron Hamiltonian and a mean-field potential:\n",
+    "\n",
     "  $$ \\hat{F} = \\hat{h} + \\sum_{j} \\left( \\hat{J}_j - \\hat{K}_j \\right) $$\n",
+    "\n",
     "  - $\\hat{h}$: Kinetic energy and nuclear attraction operators.\n",
     "  - $\\hat{J}_j$: Coulomb operator (electron-electron repulsion).\n",
     "  - $\\hat{K}_j$: Exchange operator (arises from antisymmetry requirement of the wavefunction).\n",
     "\n",
     "### **Self-Consistent Field (SCF) Method**\n",
+    "\n",
     "1. **Guess** initial molecular orbitals $\\psi_i$.\n",
     "2. **Construct** the Fock operator $\\hat{F}$ using the current $\\psi_i$.\n",
     "3. **Solve** the Hartree-Fock equation $\\hat{F} \\psi_i = \\varepsilon_i \\psi_i$ to obtain new orbitals $\\psi_i$.\n",
@@ -45,6 +44,7 @@
     "\n",
     "## **3. Total Energy of the System**\n",
     "- Total electronic energy $E_{HF}$ in the Hartree-Fock approximation:\n",
+    "\n",
     "  $$ E_{HF} = \\sum_{i} \\langle \\psi_i | \\hat{h} | \\psi_i \\rangle + \\frac{1}{2} \\sum_{i,j} \\left( J_{ij} - K_{ij} \\right) $$\n",
     "  - $J_{ij}$: Coulomb integral.\n",
     "  - $K_{ij}$: Exchange integral.\n",
@@ -55,6 +55,7 @@
     "## **4. Strengths and Limitations**\n",
     "\n",
     "### **Strengths**\n",
+    "\n",
     "- **Efficient**: Reduces the complexity of the multi-electron Schrödinger equation.\n",
     "- **Exchange interactions**: Includes effects of exchange through the Slater determinant.\n",
     "\n",
@@ -86,8 +87,7 @@
     "\n",
     "4. **Electronic Energy**:\n",
     "\n",
-    "   $$ E_{HF} = \\sum_{i} \\langle \\psi_i | \\hat{h} | \\psi_i \\rangle + \\frac{1}{2} \\sum_{i,j} \\left( J_{ij} - K_{ij} \\right) $$\n",
-    "\n"
+    "   $$ E_{HF} = \\sum_{i} \\langle \\psi_i | \\hat{h} | \\psi_i \\rangle + \\frac{1}{2} \\sum_{i,j} \\left( J_{ij} - K_{ij} \\right) $$\n"
    ]
   },
   {
