--- a/_sources/ch07/note04.ipynb
+++ b/_sources/ch07/note04.ipynb
@@ -101,6 +101,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### HF on example of He atom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/HF_He.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/V_eff.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/HF2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/HF_slater.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/HF_orb_e.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Practical use of HF "
    ]
   },
